--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "react-xml-parser": "^1.1.8",
     "sass": "^1.68.0"
   },
   "scripts": {
