--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-xml-parser": "^1.1.8",
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "use-debounce": "^9.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
