--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "debounce": "^1.2.1",
     "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
