--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.7",
     "react-xml-parser": "^1.1.8",
     "sass": "^1.68.0",
     "use-debounce": "^9.0.4"
