--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ djangorestframework = "*"
 django-environ = "*"
 djangorestframework-simplejwt = "*"
 pillow = "*"
+django-filter = "*"
 
 [dev-packages]
 
